--- a/doc/doxygen.cfg
+++ b/doc/doxygen.cfg
@@ -28,7 +28,6 @@ INPUT            = ../doc/index.doxygen \
 		   ../include/pcm_ioplug.h \
 		   ../include/control_external.h \
 		   ../include/mixer.h \
-		   ../include/use-case.h \
 		   ../src/error.c \
 		   ../src/dlmisc.c \
 		   ../src/async.c \
@@ -77,8 +76,7 @@ INPUT            = ../doc/index.doxygen \
 		   ../src/rawmidi \
 		   ../src/timer \
 		   ../src/hwdep \
-		   ../src/seq \
-		   ../src/ucm
+		   ../src/seq
 EXCLUDE		 = ../src/control/control_local.h \
 		   ../src/pcm/atomic.h \
 		   ../src/pcm/interval.h \
@@ -93,8 +91,7 @@ EXCLUDE		 = ../src/control/control_local.h \
 		   ../src/hwdep/hwdep_local.h \
 		   ../src/mixer/mixer_local.h \
 		   ../src/rawmidi/rawmidi_local.h \
-		   ../src/seq/seq_local.h \
-		   ../src/seq/ucm_local.h
+		   ../src/seq/seq_local.h
 RECURSIVE	 = YES
 FILE_PATTERNS    = *.c *.h
 EXAMPLE_PATH     = ../test
